...
                        }
                    }
                }
            }
        }
        LauncherSearchBar(
            queryState, stringResource(R.string.settings_search), "app_search_query",
            modifier = Modifier.padding(top = 12.dp).onSizeChanged { searchBarHeight = with(density) { it.height.toDp() } }
                .onGloballyPositioned { transition?.searchBounds = it.boundsInRoot() }
                .graphicsLayer { alpha = transition?.searchBarAlpha ?: 1f },
            autoFocus = requestKeyboard,
            onSearch = { results.firstOrNull()?.let { open(it) } },
            trailingIcon = {
...
